...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login Form View Controller-->
        <scene sceneID="ivw-tE-qxy">
            <objects>
                <viewController storyboardIdentifier="Login Form Interface" id="atS-jU-GhE" customClass="LoginFormViewController" customModule="Main" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="hyT-hb-KnD"/>
                        <viewControllerLayoutGuide type="bottom" id="Qvk-fF-ez2"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="zPQ-Oc-dZJ">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="800"/>
...
                                                            <constraint firstAttribute="height" constant="24" id="RN2-js-xqM"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sx6-Kp-cjK" userLabel="password">
                                                        <rect key="frame" x="0.0" y="166" width="288" height="50"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   学员编号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0kY-8N-NBg">
                                                                <rect key="frame" x="0.0" y="0.0" width="90" height="50"/>
                                                                <color key="backgroundColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                <constraints>
...
                                                            <constraint firstAttribute="height" constant="24" id="Zq3-wl-5ZM"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j05-uf-OaT" userLabel="birthday">
                                                        <rect key="frame" x="0.0" y="394" width="288" height="50"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   出生年月" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cap-9o-neO">
                                                                <rect key="frame" x="0.0" y="0.0" width="90" height="50"/>
                                                                <color key="backgroundColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                <constraints>
...
                                                    </label>
                                                </subviews>
                                            </stackView>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Kh-0M-art">
                                                <rect key="frame" x="0.0" y="629" width="288" height="33"/>
                                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                <accessibility key="accessibilityConfiguration" identifier="register"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                <state key="normal" title="注册">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                            </button>
                                        </subviews>
...
